---
source: crates/stepflow-main/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=../../tests/stepflow-config.yml"
    - "--format=json"
    - "--schemas=false"
---
success: true
exit_code: 0
----- stdout -----
{
  "components": [
    {
      "component": "create_messages",
      "description": "Create a chat message list from system instructions and user prompt"
    },
    {
      "component": "eval",
      "description": "Execute a nested workflow with given input and return the result"
    },
    {
      "component": "get_blob",
      "description": "Retrieve JSON data from a blob using its ID"
    },
    {
      "component": "load_file",
      "description": "Load and parse a file (JSON, YAML, or text) from the filesystem"
    },
    {
      "component": "openai",
      "description": "Send messages to OpenAI's chat completion API and get a response"
    },
    {
      "component": "put_blob",
      "description": "Store JSON data as a blob and return its content-addressable ID"
    }
  ]
}

----- stderr -----
